css/styles.css
/* .montserrat-<uniquifier> {
  font-family: "Montserrat", sans-serif;
  font-optical-sizing: auto;
  font-weight: <weight>;
  font-style: normal;
} */
html {
    scrollbar-gutter: stable;
    scroll-behavior: smooth;
}
:where(h1, h2, h3, h4, p){
    margin: 0;
    padding: 0;
}
:where(h1, h2){
    margin-bottom: 24px;
}
body {
    margin: 0;
    padding: 0;
    font-family: 'Montserrat', sans-serif;
    background-color: rgb(8, 13, 32);
    color: white;
}
.container{
    display: flex;
    flex-direction: column;
    width: 100%;
    max-width: 1440px;
    padding: clamp(3.125rem, 0.893rem + 5.952vw, 6.25rem) 20px;
}
h2{
    font-size: clamp(2rem, 1.464rem + 1.429vw, 2.75rem);
}
p{
    font-weight: 600;
    line-height: 1.5rem;
}

/* HEADER */

header{
    display: flex;
    align-items: center;
    justify-content: center;
    color: white;
    width: 100%;
    height: 80px;
    position: sticky;
    top: 0;
    z-index: 1000;
}
header .container{
    flex-direction: row;
    justify-content: space-between;
    padding-bottom: 0;
    padding-top: 0;
}
a{
    text-decoration: none;
    color: white;
    font-weight: 600;
}
ul{
    display: flex;
    gap: 20px;
    padding: 0;
    list-style: none;
}

/* HERO */

.hero{
    display: flex;
    justify-content: center;
    height: 100vh;
    width: 100%;
    margin-top: -80px;
    background-color: rgb(8, 13, 32);
}
.hero .container{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    color: white;
    position: relative;
}
.content{
    display: flex;
    justify-content: space-between;
    width: 100%;
    flex-wrap: wrap;
    gap: 40px;
}
.text{
    display: flex;
    flex-direction: column;
    flex-basis: 900px;
    flex-shrink: 1;
}
.button-container{
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: flex-end;
    flex-basis: 500px;
    flex-shrink: 3;
}
.button-container p{
    font-weight: 600;
    margin-bottom: 16px;
}
button{
    background-color: rgb(121, 154, 39);
    color: white;
    border: none;
    padding: 16px 50px;
    font-size: 16px;
    font-weight: 600;
    text-transform: uppercase;
    cursor: pointer;
    border-radius: 5px;
    width: 100%;
}
h1{
    font-size: clamp(3rem, 2.464rem + 1.429vw, 3.75rem);
    line-height: 56px;
    font-weight: 700;
}
.hero h1 span{
    color: rgb(121, 154, 39);
}
.nuvvologo{
    position: absolute;
    display: flex;
    align-items: center;
    bottom: 5px;
}
.nuvvologo img{
    width: auto;
    height: clamp(3.55rem, -0.268rem + 10.714vw, 9.375rem); 
    /* 60px */
}
.mirror-nuvvologo{
    position: absolute;
    display: flex;
    align-items: center;
    top: 10px;
}
.mirror-nuvvologo img{
    width: auto;
    height: clamp(3.55rem, -0.268rem + 10.714vw, 9.375rem);
}
.N{
    margin-right: clamp(1.25rem, -0.313rem + 4.167vw, 3.438rem);
    /* 20px */
}
.U{
    margin-right: clamp(0.938rem, 0.045rem + 2.381vw, 2.188rem);
    /* 15px */
}
.V{
    margin-right: clamp(0.625rem, 0.179rem + 1.19vw, 1.25rem);
    /* 10px */
}
.O{
    margin-left: clamp(0.438rem, 0.08rem + 0.952vw, 0.938rem);
    /* 7px */
}

@media (max-width: 768px){
    .hero{
        height: auto;
    }
    .hero .container{
        padding-top: 120px;
        padding-bottom: 140px;
    }
}

/* ABOUT */


.about{
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    background-color: rgb(16, 23, 49);
    border-radius: 20px 20px 0 0;
    border-top: 1px solid rgb(40, 42, 49);
}
.about .container{
    position: relative;
    padding-top: clamp(6.25rem, -2.679rem + 23.81vw, 18.75rem);
    padding-bottom: 150px;
    text-align: center;
    align-items: center;
}
.about span{
    color: #799a27;
}
.text-aling{
    display: flex;
    width: 50%;
    text-align: left;
}
@media (max-width: 768px){
    .about .container{
        padding-top: 120px;
        padding-bottom: 90px;
    }
    .text-aling{
        width: 100%;
    }
}

/* SERVICES */

.services{
    display: flex;
    justify-content: center;
    width: 100%;
    border-top: 1px solid rgb(40, 42, 49);
    border-bottom: 1px solid rgb(40, 42, 49);
}
.services .container{
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
    gap: 4rem;
    align-items: start;
    padding-left: 0;
    padding-right: 0;
    max-width: 1480px;
}
.textcontent{
    box-sizing: border-box;
    padding: 0 0 0 20px;
}
.textcontent span{
    color: rgb(121, 154, 39);
}
.card-container{
    display: grid;
    gap: 1rem;
    grid-template-columns: 1fr 1fr;
    padding: 0 20px;
}
.card{
    background-color: rgb(16, 23, 49);
    padding: 20px;
    border-radius: 10px;
    border: 1px solid rgb(40, 42, 49);
}
.card > h3{
    margin-bottom: 1rem;
    color: #799a27;
}
.grid-span-2{
    grid-column: span 2;
}

@media (max-width: 768px){
    .services .container{
        gap: 2rem;
    }
    .services .textcontent{
        padding: 0 20px;
    }
    .services .card-container{
        display: grid;
        padding: 0 20px;
        grid-template-columns: 1fr;
        gap: 1rem;
    }
    .grid-span-2{
        grid-column: 1;
    }
}
/* More Services */

.more-services{
    display: flex;
    justify-content: center;
    width: 100%;
    background-color: rgb(16, 23, 49);
}
.more-services .container{
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
    gap: 4rem;
    align-items: start;
    padding-left: 0;
    padding-right: 0;
    max-width: 1480px;
}
.item-1{
    order: 2;
}
.item-2{
    order: 1;
}
.more-services .card{
    background-color: rgb(8, 13, 32);
}
.more-services .textcontent{
    display: flex;
    align-items: flex-end;
    flex-direction: column;
    box-sizing: border-box;
    padding: 0 20px 0 0;
    text-align: end;
}
@media (max-width: 768px){
    .item-1{
        order: 1;
    }
    .item-2{
        order: 2;
    }
    .more-services .container{
        gap: 2rem;
    }
    .more-services .textcontent{
        align-items: flex-start;
        text-align: start;
        padding: 0 20px;
    }
    .more-services .card-container{
        padding: 0 20px;
        grid-template-columns: 1fr;
        gap: 1rem;
    }
}

/* Our Process */

.our-process{
    display: flex;
    justify-content: center;
    width: 100%;
    border-top: 1px solid rgb(40, 42, 49);
    border-bottom: 1px solid rgb(40, 42, 49);
}
.our-process .container{
    align-items: center;
    text-align: left;
    padding-left: 0;
    padding-right: 0;
}
.our-process span{
    color: rgb(121, 154, 39);
}
.our-process h2{
    margin-bottom: 100px;
    padding: 0 20px;
}
.our-process h3{
    font-size: 1.5rem;
}
.our-process-grid{
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
    padding: 0 20px;
    column-gap: 2rem;
    row-gap: 6rem;
}
.our-process-card{
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    align-items: center;
    
}
.card-img > img{
    height: 50px;
    width: auto;
    margin-bottom: 1rem;
}
.card-text div > .material-symbols-outlined{
    font-size: 50px;
    margin-right: 1rem;
}
.card-text div{
    display: flex;
    align-items: center;
    margin-bottom: 1rem;
}
.last-card{
    justify-content: space-between;
}
.last-card .material-symbols-outlined{
    font-size: 50px;
}
@media (max-width: 768px){
    .our-process h2{
        margin-bottom: 50px;
    }
    .our-process-grid{
        row-gap: 2rem;
    }
}

/* Entre em contato */

.getintouch{
    display: flex;
    justify-content: center;
    background-color: rgb(16, 23, 49);
    border-radius: 0 0 20px 20px;
    border-bottom: 1px solid rgb(40, 42, 49);
}
.getintouch .container{
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
    gap: 4rem;
    align-items: start;
    padding-left: 0;
    padding-right: 0;
    max-width: 1480px;
}
.getintouch .textcontent > p{
    margin-bottom: 2.5rem;
}
.line{
    display: inline-block;
    height: 1px;
    width: 80px;
    background-color: rgb(121, 154, 39);
    margin-bottom: 20px;
}
.contact-option-container{
    display: flex;
    flex-direction: column;
    gap: 1.25rem;
}
.contact-option{
    display: flex;
    align-items: center;
    gap: 0.87rem;
}
.contact-option h3{
    font-size: 0.9rem;
    font-weight: 800;
    letter-spacing: 0.1rem;
}
.svg-background{
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: rgba(121, 154, 39, 0.418);
    border-radius: 4px;
    width: 36px;
    height: 36px;
}
.material-symbols-outlined{
    font-family: 'Material Symbols Outlined';
    font-weight: normal;
    font-style: normal;
    font-size: 18px;  /* Preferred icon size */
    display: inline-block;
    line-height: 1;
    text-transform: none;
    letter-spacing: normal;
    word-wrap: normal;
    white-space: nowrap;
    direction: ltr;
    color: rgb(121, 154, 39);
}
.form-container{
    box-sizing: border-box;
    padding: 0 20px;
}
form{
    display: flex;
    flex-direction: column;
    padding: clamp(1rem, 0.286rem + 1.905vw, 2rem);
    gap: 1.25rem;
    background-color: rgb(8, 13, 32); 
    border: 1px solid rgb(40, 42, 49);
    border-radius: 8px;
    font-size: 0.80rem;
    font-weight: 500;
}
form div{
    display: flex;
    flex-direction: column;
}
label{
    margin-bottom: 6px;
    
}
input, select, textarea{
    box-sizing: border-box;
    padding: 11px 14px;
    background-color: rgb(16, 23, 49);
    border: 1px solid rgb(40, 42, 49);
    border-radius: 4px;
    width: 100%;
    font-size: 0.9375rem;
    color: white;
    outline: none;
}
input:autofill, select:autofill, textarea:autofill{
    background-color: rgb(16, 23, 49);
}
select{
    cursor: pointer;
    padding-right: 36px;
    color: white;
}
textarea{
    resize: vertical;
    min-height: 150px;
}
form button{
    padding: 13px 24px;
    font-weight: 700;
    letter-spacing: 0.01em;
    text-transform: none;
    margin-top: 0.25rem;
}
@media (max-width: 768px){
    .getintouch .container{
        gap: 2rem;
    }
}

/* FOOTER */

footer{
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
}
footer .container{
    justify-content: center;
    align-items: center;
    padding-top: 50px;
    padding-bottom: 50px;
}

